--- a/front/src/scss/style.scss
+++ b/front/src/scss/style.scss
@@ -1,8 +1,8 @@
-.match-status-container {
+.match-logger-container {
   padding-top: 20px;
   padding-bottom: 20px;
   
-  .match-status {
+  .match-logger {
     display: flex;
     align-items: center;
     justify-content: center;
