--- a/front/src/scss/style.scss
+++ b/front/src/scss/style.scss
@@ -7,7 +7,7 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 120px;
+    min-height: 120px;
     border-radius: 10px;
     background-color: #f3f3f3;
     font-size: 1.5em;
